--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <title>Gallery</title>
 </head>
 <body>
+    <a href="index.html">HOME</a><br>
     <img src="Images/1.jpg" alt="1">
     <img src="Images/2.jpg" alt="2">
     <img src="Images/3.jpg" alt="3"><br>
