add commands list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <title>Home</title>
 </head>
 <body>
-    <a href="gallery.html">GALLERY</a>
+    <a href="gallery.html">GALLERY</a><br>
+    <ul>
+        <li>git config --global user name "your name" (один раз в жизни)</li>
+        <li>git config --global user email "your email" (один раз в жизни)</li>
+        <li>git init - создать репозиторий (один раз для проекта)</li>
+        <li>git add index.html - добавил файл index.html</li>
+        <li>git commit -m "Создал файл index.html"</li>
+        <li>git log (необязательно) - для просмотра истории коммитов</li>
+        <li>git checkout ... (необязательно) - переключиться на коммит</li>
+        <li>git status (необязательно) посмотреть статус репозитория</li>
+        <li>git remote add origin https://... - устанавливается подключение к удаленному серверу и git репозиторию на нем.</li>
+        <li>git push origin master - пушим изменения на ветку в удаленный репозиторий</li>
+    </ul>
 </body>
 </html>
